Header for legal.

--- a/legal.html
+++ b/legal.html
@@ -27,6 +27,8 @@
     </ul>
   </div>
   <div id="maintext">
+<h2>Legal information</h2>
+
 <p>Meson is copyrighted by all members of the Meson development
 team. For details see the <tt>authors.txt</tt> file that comes with
 the source code. Meson is licensed under
