--- a/documentation.html
+++ b/documentation.html
@@ -33,9 +33,12 @@
 the <a href="https://github.com/jpakkane/meson/wiki">project
 wiki</a>.</p>
 
-<p>To get started we recommend first reading
-the <a href="https://github.com/jpakkane/meson/wiki/Quick%20guide">quick
-guide</a>. After that you might want to go through
+<p>To get started we recommend first reading either the guide
+that <a href="https://github.com/jpakkane/meson/wiki/Quick%20guide">shows
+you how to build a project with Meson</a> or the guide that shows
+you <a href="https://github.com/jpakkane/meson/wiki/Tutorial">how to
+create a new project using Meson</a>. After that you might want to go
+through
 the <a href="https://github.com/jpakkane/meson/wiki/Manual">manual</a>.</p>
 
 <p>There is also a project FAQ
