Emphasize open source.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <div id="maintext">
 <h2>Overview</h2>
 
-<p>Meson is a build system meant to be both extremely fast, and, even
-more importantly, as user friendly as possible.</p>
+<p>Meson is an open source build system meant to be both extremely
+fast, and, even more importantly, as user friendly as possible.</p>
 
 <p>The main design point of Meson is that every moment a developer
 spends writing or debugging build definitions is a second wasted. So
