--- a/development.html
+++ b/development.html
@@ -17,6 +17,7 @@
   <div id="navigation">
     <ul>
 <li><a href="index.html">Main page</a></li>
+<li><a href="samples.html">Sample code</a></li>
 <li><a href="download.html">Download</a></li>
 <li><a href="videos.html">Videos</a></li>
 <li><a href="documentation.html">Documentation</a></li>
