--- a/samples.html
+++ b/samples.html
@@ -28,18 +28,31 @@
     </ul>
   </div>
   <div id="maintext">
-<h2>Community</h2>
+<h2>A helloworld example</h2>
 
-<p>There are two main methods of connecting with other Meson
-developers. The first one is the mailing list, which is hosted
-at <a href="https://groups.google.com/forum/#!forum/mesonbuild">Google
-Groups</a>.</p>
+<pre>project('hello', 'c')
+executable('hello', 'helloworld.c')
+</pre>
 
-<p>The second way is via IRC. The channel to use
-is <tt>#mesonbuild</tt>
-at <a href="https://freenode.net/">Freenode</a>.</p>
+<h2>A GTK+ app</h2>
+<pre>project('gtk test', 'c')
+gtk_dep = dependency('gtk+-3.0')
+executable('myapp', 'myapp.c',
+  dependencies : gtk_dep)
+</pre>
 
+<h2>A Qt 5 app</h2>
+<pre>project('qt5 demo', 'cpp')
+qt5 = import('qt5')
+qt5_dep = dependency('qt5', modules : 'Widgets')
 
+prep = qt5.preprocess(moc_headers : 'mainWindow.h',
+                      ui_files : 'mainWindow.ui')
+
+executable('qt5app',
+  sources : ['main.cpp', 'mainWindow.cpp', prep]
+  dependencies : qt5_dep)
+</pre>
   </div>
 </body>
 </html>
