--- a/dependencies.html
+++ b/dependencies.html
@@ -29,18 +29,20 @@
     </ul>
   </div>
   <div id="maintext">
-<h2>Videos</h2>
+<h2>Cross platform dependencies</h2>
 
-<p> A good overview of Meson can be found in this presentation from Linux.conf.au 2015.</p>
+<p>One major development headache is managing dependencies in a cross
+platform project. On one hand you want to use dependencies provided by
+your distribution whenever possible. On the other hand you might need
+to run on platforms that do not provide a package manager or you might
+need a different version of a dependency than what is available.<p>
 
-<iframe width="640" height="390" src="https://www.youtube.com/embed/KPi0AuVpxLI" frameborder="0" allowfullscreen></iframe>
-
-<p>Meson was also presented in the following lightning talk at FOSDEM 2014. If your browser does not support HTML5 video, here's a <a href="http://video.fosdem.org/2014/H2215_Ferrer/Sunday/Introducing_the_Meson_build_system.webm">direct link</a>.</p>
-
-<p><video>
-    <source src="http://video.fosdem.org/2014/H2215_Ferrer/Sunday/Introducing_the_Meson_build_system.webm">
-  </video>
-</p>
+<p>Meson provides a simple, cross-platform dependency mechanism that
+is based on source code called Wrap. For details
+see <a href="https://github.com/mesonbuild/meson/wiki/Wrap%20dependency%20system%20manual">Wrap's
+documentation</a>. We provide Wraps for several open source
+projects. These are provided in
+the <a href="http://wrapdb.mesonbuild.com">Wrap database</a>.</p>
   </div>
 </body>
 </html>
