--- a/samples.html
+++ b/samples.html
@@ -19,10 +19,11 @@
 <li><a href="index.html">Main page</a></li>
 <li><a href="samples.html">Sample code</a></li>
 <li><a href="download.html">Download</a></li>
-<li><a href="videos.html">Videos</a></li>
 <li><a href="documentation.html">Documentation</a></li>
+<li><a href="dependencies.html">Dependencies</a></li>
 <li><a href="development.html">Development</a></li>
 <li><a href="community.html">Community</a></li>
+<li><a href="videos.html">Videos</a></li>
 <li><a href="legal.html">Legal</a></li>
 
     </ul>
