--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@ fast, and, even more importantly, as user friendly as possible.</p>
 spends writing or debugging build definitions is a second wasted. So
 is every second spent waiting for the build system to actually start
 compiling code.</p>
+
+<h3>Features</h3>
+
+<ul>
+  <li>multiplatform support for Linux, OSX, Windows, Gcc, Clang, Visual Studio and others</li>
+  <li>supported languages include C, C++, Fortran, Java, Rust</li>
+  <li>build definitions in a very readable and user friendly non-turing complete DSL</li>
+  <li>cross compilation for many operating systems as well as bare metal</li>
+  <li>optimized for extremely fast full and incremental builds without sacrificing correctness</li>
+  <li>built-in multiplatform dependency provider that works together with distro packages</li>
+  <li>fun!</li>
+</ul>
   </div>
 </body>
 </html>
