--- a/videos.html
+++ b/videos.html
@@ -31,16 +31,17 @@
   <div id="maintext">
 <h2>Videos</h2>
 
-<p> A good overview of Meson can be found in this presentation from Linux.conf.au 2015.</p>
+<p> A good overview of Meson can be found
+in <a href="https://www.youtube.com/watch?v=KPi0AuVpxLI">this
+presentation from Linux.conf.au 2015</a>.</p>
 
-<iframe width="640" height="390" src="https://www.youtube.com/embed/KPi0AuVpxLI" frameborder="0" allowfullscreen></iframe>
+<p>A talk describing the design goals behind Meson's multiplatform
+dependency system was held <a href="http://youtu.be/CTJtKtQ8R5k">the
+following year at LCA 2016</a>.</p>
 
-<p>Meson was also presented in the following lightning talk at FOSDEM 2014. If your browser does not support HTML5 video, here's a <a href="http://video.fosdem.org/2014/H2215_Ferrer/Sunday/Introducing_the_Meson_build_system.webm">direct link</a>.</p>
-
-<p><video>
-    <source src="http://video.fosdem.org/2014/H2215_Ferrer/Sunday/Introducing_the_Meson_build_system.webm">
-  </video>
-</p>
+<p>The first ever public presentation on Meson
+was <a href="http://video.fosdem.org/2014/H2215_Ferrer/Sunday/Introducing_the_Meson_build_system.webm">this
+lightning talk</a> at FOSDEM 2014.</p>
   </div>
 </body>
 </html>
