Mention PyPi as an installation possibility.

--- a/download.html
+++ b/download.html
@@ -31,7 +31,13 @@
   <div id="maintext">
 <h2>Downloading Meson</h2>
 
-<p>Meson releases can be downloaded from the <a href="https://github.com/jpakkane/meson/releases">Github release page</a>. The newest development code can be obtained directly from <a href="https://github.com/jpakkane/meson">Git</a></p>
+<p>Meson releases can be downloaded from the <a href="https://github.com/jpakkane/meson/releases">Github release page</a>.
+
+<p>Meson is also available in
+the <a href="https://pypi.python.org/pypi/meson/">Python Package
+Index</a> and can be installed with <tt>pip3 install meson</tt>.</p>
+
+<p>The newest development code can be obtained directly from <a href="https://github.com/jpakkane/meson">Git</a></p>
 
 <h2>Dependencies</h2>
 
