--- a/download.html
+++ b/download.html
@@ -41,9 +41,9 @@ Index</a> and can be installed with <tt>pip3 install meson</tt>.</p>
 
 <h2>Dependencies</h2>
 
-<p>Meson is implemented in Python 3. If you operating system provides
-a package manager, use should should install it with that. For
-platforms that don't have a package manager, you need do
+<p>Meson is implemented in Python 3. If your operating system provides
+a package manager, use should install it with that. For
+platforms that don't have a package manager, you need to
 download it from <a href="https://www.python.org/downloads/">Python's
 home page</a>.</p>
 
