Fix Ninja link.

--- a/download.html
+++ b/download.html
@@ -48,10 +48,9 @@ download it from <a href="https://www.python.org/downloads/">Python's
 home page</a>.</p>
 
 <p>Depending on your platform and backend you wish to use, you might
-need the <a href="https://martine.github.io/ninja/">Ninja
+need the <a href="https://ninja-build.org/">Ninja
 executable</a>. Again, use your distro-provided version if
-possible. Otherwise download it
-from <a href="https://github.com/martine/ninja/releases">here</a>.</p>
+possible. Otherwise download it from Ninja project's web site.</p>
   </div>
 </body>
 </html>
