--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -402,15 +402,19 @@ endif
 <pre><code class="language-meson">    program find_program(program_name1, program_name2, ...)
 </code></pre>
 <p><code>program_name1</code> here is a string that can be an executable or script to be searched for in <code>PATH</code>, or a script in the current source directory.</p>
-<p>Meson will also autodetect scripts with a shebang line and run them with the executable/interpreter specified in it both on Windows (because the command invocator will reject the command otherwise) and Unixes (if the script file does not have the executable bit set). Hence, you <em>must not</em> manually add the interpreter while using this script as part of a list of commands.</p>
 <p><code>program_name2</code> and later positional arguments are used as fallback strings to search for. This is meant to be used for cases where the program may have many alternative names, such as <code>foo</code> and <code>foo.py</code>. The function will check for the arguments one by one and the first one that is found is returned. Meson versions earlier than 0.37.0 only accept one argument.</p>
+<p>Keyword arguments are the following:</p>
+<ul>
+<li>
+<code>required</code> By default, <code>required</code> is set to <code>true</code> and Meson will abort if no program can be found. If <code>required</code> is set to <code>false</code>, Meson continue even if none of the programs can be found. You can then use the <code>.found()</code> method on the returned object to check whether it was found or not.</li>
+</ul>
+<p>Meson will also autodetect scripts with a shebang line and run them with the executable/interpreter specified in it both on Windows (because the command invocator will reject the command otherwise) and Unixes (if the script file does not have the executable bit set). Hence, you <em>must not</em> manually add the interpreter while using this script as part of a list of commands.</p>
 <p>If you need to check for a program in a non-standard location, you can just pass an absolute path to <code>find_program</code>, e.g.</p>
 <pre><code>setcap = find_program('setcap', '/usr/sbin/setcap', '/sbin/setcap', required : false)
 </code></pre>
 <p>It is also possible to pass an array to <code>find_program</code> in case you need to construct the set of paths to search on the fly:</p>
 <pre><code>setcap = find_program(['setcap', '/usr/sbin/setcap', '/sbin/setcap'], required : false)
 </code></pre>
-<p>If none of the programs are found, Meson will abort. You can tell it not to by setting the keyword argument <code>required</code> to false, and then use the <code>.found()</code> method on the returned object to check whether it was found or not.</p>
 <p>The returned object also has methods that are documented in the <a href="Reference-manual.html#external-program-object">object methods section</a> below.</p>
 <h3 id="files">files()</h3>
 <pre><code class="language-meson">    file_array files(list_of_filenames)
