--- a/howtox.html
+++ b/howtox.html
@@ -32,10 +32,10 @@
 
 <script src="assets/js/lines_around_headings.js"></script>
 
-<script src="assets/js/trie.js"></script>
 <script src="assets/js/prism-core.js"></script>
 <script src="assets/js/prism-autoloader.js"></script>
 <script src="assets/js/prism_autoloader_path_override.js"></script>
+<script src="assets/js/trie.js"></script>
 
 <title>The Meson® Build System</title>
 <link rel="icon" type="image/png" href="assets/images/favicon.png">
@@ -168,6 +168,9 @@ $('body').removeClass('no-script');
 <h2 id="set-default-cc-language-version">Set default C/C++ language version</h2>
 <pre><code class="language-meson">project('myproj', 'c', 'cpp',
         default_options : ['c_std=c11', 'cpp_std=c++11'])
+</code></pre>
+<p>The language version can also be set on a per-target basis.</p>
+<pre><code class="language-meson">executable(..., override_options : ['c_std=c11'])
 </code></pre>
 <h2 id="enable-threads">Enable threads</h2>
 <p>Lots of people seem to do this manually with <code>find_library('pthread')</code> or something similar. Do not do that. It is not portable. Instead do this.</p>
