Bleep. Bloop. I am a bot.

--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -438,7 +438,7 @@ endif
 </code></pre>
 <p>Meson will then do the right thing.</p>
 <h3 id="generator">generator()</h3>
-<pre><code class="language-meson">    generator_object gen(*executable*, ...)
+<pre><code class="language-meson">    generator_object generator(*executable*, ...)
 </code></pre>
 <p>See also: <a href="Reference-manual.html#custom_target"><code>custom_target</code></a></p>
 <p>This function creates a <a href="Reference-manual.html#generator-object">generator object</a> that can be used to run custom compilation commands. The only positional argument is the executable to use. It can either be a self-built executable or one returned by find_program. Keyword arguments are the following:</p>
