--- a/Using-the-WrapDB.html
+++ b/Using-the-WrapDB.html
@@ -179,7 +179,7 @@ patch_hash = 2327a42c8f73a4289ee8c9cd4abc43b324d0decc28d6e609e927f0a50321af4a
 </code></pre>
 <p>When Meson encounters this it will automatically download, unpack and patch the source files.</p>
 <h2 id="contributing-build-definitions">Contributing build definitions</h2>
-<p>The contents of the Wrap database are tracked in git repos of the <a href="https://github.com/mesonbuild">Mesonbuild project</a>. The actual process is simple and described in <a href="https://github.com/mesonbuild/wrapweb/wiki">submission documentation</a>.</p>
+<p>The contents of the Wrap database are tracked in git repos of the <a href="https://github.com/mesonbuild">Mesonbuild project</a>. The actual process is simple and described in <a href="Adding-new-projects-to-wrapdb.html">submission documentation</a>.</p>
 
 </div>
 
