--- a/Generating-sources.html
+++ b/Generating-sources.html
@@ -175,7 +175,7 @@ $('body').removeClass('no-script');
                                    '--c-out', '@OUTPUT0@',
                                    '--h-out', '@OUTPUT1@'])
 </code></pre>
-<p>The <code>@INPUT@</code> there will be transformed to <code>'out.c' 'out.h'</code>. Just like the output, you can also refer to each input file individually by index.</p>
+<p>The <code>@INPUT@</code> there will be transformed to <code>'somefile1.c' 'file2.c'</code>. Just like the output, you can also refer to each input file individually by index.</p>
 <p>Then you just put that in your program and you're done.</p>
 <pre><code class="language-meson">executable('program', 'main.c', gen_src)
 </code></pre>
