--- a/i18n-module.html
+++ b/i18n-module.html
@@ -191,6 +191,9 @@ current option is <code>'glib'</code>, see
 <a href="https://github.com/mesonbuild/meson/blob/master/mesonbuild/modules/i18n.py">source</a>
 for for their value</p>
 </li>
+<li>
+<p><code>install</code>: (<em>Added 0.43.0</em>) if false, do not install the built translations.</p>
+</li>
 </ul>
 <p>This function also defines targets for maintainers to use:
 <strong>Note</strong>: These output to the source directory</p>
