--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -314,8 +314,13 @@ to the target file. Note that your command argument list may not
 contain <code>@OUTPUT@</code> when capture mode is active.</li>
 <li>
 <code>command</code> command to run to create outputs from inputs. The command
-may be strings or the return of <code>find_program()</code> or <code>executable()</code>
-(note: always specify commands in array form <code>['commandname', '-arg1', '-arg2']</code> rather than as a string <code>'commandname -arg1 -arg2'</code> as the latter will <em>not</em> work)</li>
+may be strings or the return value of functions that return file-like
+objects such as <a href="Reference-manual.html#find_program"><code>find_program()</code></a>,
+<a href="Reference-manual.html#executable"><code>executable()</code></a>, <a href="Reference-manual.html#configure_file"><code>configure_file()</code></a>,
+<a href="Reference-manual.html#files"><code>files()</code></a>, <a href="Reference-manual.html#custom_target"><code>custom_target()</code></a>, etc.
+Meson will automatically insert the appropriate dependencies on
+targets and files listed in this keyword argument.<br>
+Note: always specify commands in array form <code>['commandname', '-arg1', '-arg2']</code> rather than as a string <code>'commandname -arg1 -arg2'</code> as the latter will <em>not</em> work.</li>
 <li>
 <code>depend_files</code> files (<a href="Reference-manual.html#string-object"><code>string</code></a>,
 <a href="Reference-manual.html#files"><code>files()</code></a>, or <a href="Reference-manual.html#configure_file"><code>configure_file()</code></a>) that
@@ -671,6 +676,10 @@ recompilation</li>
 <code>output</code> a template string (or list of template strings) defining
 how an output file name is (or multiple output names are) generated
 from a single source file name</li>
+<li>
+<code>capture</code> when this argument is set to true, Meson captures <code>stdout</code>
+of the <code>executable</code> and writes it to the target file specified as
+<code>output</code>. Available since v0.43.0.</li>
 </ul>
 <p>The returned object also has methods that are documented in the
 <a href="Reference-manual.html#generator-object">object methods section</a> below.</p>
@@ -1353,9 +1362,9 @@ value as a string or empty string if it is not defined.</p>
 <code>gcc</code>, <code>msvc</code>, <a href="Compiler-properties.html#compiler-id">and more</a>.</p>
 </li>
 <li>
-<p><code>get_supported_arguments(list_of_string)</code> returns an array
-containing only the arguments supported by the compiler, as if
-<code>has_argument</code> were called on them individually.</p>
+<p><code>get_supported_arguments(list_of_string)</code> <em>(added 0.43.0)</em> returns
+an array containing only the arguments supported by the compiler,
+as if <code>has_argument</code> were called on them individually.</p>
 </li>
 <li>
 <p><code>has_argument(argument_name)</code> returns true if the compiler accepts
@@ -1508,7 +1517,9 @@ array</p>
 specified as the argument</p>
 </li>
 <li>
-<p><code>strip()</code> removes whitespace at the beginning and end of the string</p>
+<p><code>strip()</code> removes whitespace at the beginning and end of the string<br>
+<em>(added 0.43.0)</em> optionally can take one positional string argument,
+and all characters in that string will be stripped</p>
 </li>
 <li>
 <p><code>to_int</code> returns the string converted to an integer (error if string
@@ -1594,7 +1605,10 @@ files with custom flags. To use the object file(s) in another build
 target, use the <code>objects:</code> keyword argument.</p>
 </li>
 <li>
-<p><code>full_path()</code> returns a full path pointing to the result target file</p>
+<p><code>full_path()</code> returns a full path pointing to the result target file.<br>
+NOTE: In most cases using the object itself will do the same job as
+this and will also allow Meson to setup inter-target dependencies
+correctly. Please file a bug if that doesn't work for you.</p>
 </li>
 <li>
 <p><code>private_dir_include()</code> returns a opaque value that works like
@@ -1648,7 +1662,17 @@ cause a syntax error.</p>
 contains a target with the following methods:</p>
 <ul>
 <li>
-<code>full_path()</code> returns a full path pointing to the result target file</li>
+<p><code>full_path()</code> returns a full path pointing to the result target file<br>
+NOTE: In most cases using the object itself will do the same job as
+this and will also allow Meson to setup inter-target dependencies
+correctly. Please file a bug if that doesn't work for you.</p>
+</li>
+<li>
+<p><code>[index]</code> returns an opaque object that references this target, and can be
+used as a source in other targets. When it is used as such it will make that
+target depend on this custom target, but the only source added will be the
+one that corresponds to the index of the custom target's output argument.</p>
+</li>
 </ul>
 <h3 id="dependency-object">
 <code>dependency</code> object</h3>
