--- a/Users.html
+++ b/Users.html
@@ -231,7 +231,7 @@ $('body').removeClass('no-script');
 <li>
 <a href="https://github.com/facebook/zstd/commit/4dca56ed832c6a88108a2484a8f8ff63d8d76d91">ZStandard</a> a compression algorithm developed at Facebook (not used by default)</li>
 </ul>
-<p>Note that a more up-to-date list of GNOME projects that use Meson can be found here: https://wiki.gnome.org/Initiatives/GnomeGoals/MesonPorting</p>
+<p>Note that a more up-to-date list of GNOME projects that use Meson can be found <a href="https://wiki.gnome.org/Initiatives/GnomeGoals/MesonPorting">here</a>.</p>
 
 </div>
 
