Bleep. Bloop. I am a bot.

--- a/Cross-compilation.html
+++ b/Cross-compilation.html
@@ -218,6 +218,7 @@ c = '/usr/bin/i586-mingw32msvc-gcc'
 cpp = '/usr/bin/i586-mingw32msvc-g++'
 ar = '/usr/i586-mingw32msvc/bin/ar'
 strip = '/usr/i586-mingw32msvc/bin/strip'
+pkgconfig = '/usr/bin/i586-mingw32msvc-pkg-config'
 exe_wrapper = 'wine' # A command used to run generated executables.
 </code></pre>
 <p>The entries are pretty self explanatory but the last line is
