--- a/Using-wraptool.html
+++ b/Using-wraptool.html
@@ -200,7 +200,7 @@ Subproject status
  zlib not up to date. Have 1.2.8 2, but 1.2.8 4 is available.
 </code></pre>
 <p>In this case <code>zlib</code> has a newer release available. Updating it is straightforward:</p>
-<pre><code>$ wraptool.py update zlib
+<pre><code>$ wraptool update zlib
 Updated zlib to branch 1.2.8 revision 4
 </code></pre>
 <p>Wraptool can do other things besides these. Documentation for these can be found in the command line help, which can be accessed by <code>wraptool --help</code>.</p>
