--- a/Qt5-module.html
+++ b/Qt5-module.html
@@ -162,15 +162,24 @@ $('body').removeClass('no-script');
 <p>The Qt5 module provides tools to automatically deal with the various
 tools and steps required for Qt. The module has one method.</p>
 <h2 id="preprocess">preprocess</h2>
-<p>This method takes five keyword arguments, <code>moc_headers</code>,
-<code>moc_sources</code>, <code>ui_files</code> and <code>qresources</code> which define the files that
-require preprocessing with <code>moc</code>, <code>uic</code> and <code>rcc</code> and 'include_directories' which might be needed by moc. It returns an
-opaque object that should be passed to a main build target. A simple
-example would look like this:</p>
+<p>This method takes the following keyword arguments:</p>
+<ul>
+<li>
+<code>moc_headers</code>, <code>moc_sources</code>, <code>ui_files</code>, <code>qresources</code>, which define the files that require preprocessing with <code>moc</code>, <code>uic</code> and <code>rcc</code>
+</li>
+<li>
+<code>include_directories</code>, the directories to add to header search path for <code>moc</code> (optional)</li>
+<li>
+<code>moc_extra_arguments</code>, any additional arguments to <code>moc</code> (optional). Available since v0.44.0.</li>
+</ul>
+<p>It returns an opaque object that should be passed to a main build target.</p>
+<p>A simple example would look like this:</p>
 <pre><code class="language-meson">qt5 = import('qt5')
 qt5_dep = dependency('qt5', modules: ['Core', 'Gui'])
 inc = include_directories('includes')
-moc_files = qt5.preprocess(moc_headers : 'myclass.h', include_directories: inc)
+moc_files = qt5.preprocess(moc_headers : 'myclass.h',
+                           moc_extra_arguments: ['-DMAKES_MY_MOC_HEADER_COMPILE'],
+                           include_directories: inc)
 executable('myprog', 'main.cpp', 'myclass.cpp', moc_files,
            include_directories: inc,
            dependencies : qt5_dep)
