--- a/Unit-tests.html
+++ b/Unit-tests.html
@@ -204,12 +204,12 @@ test('envvar test', exe2, env : ['key1=value1', 'key2=value2'])
 <p>Meson also supports running the tests under GDB. Just doing this:</p>
 <pre><code class="language-console">$ meson test --gdb testname
 </code></pre>
-<p>Mesontest will launch <code>gdb</code> all set up to run the test. Just type <code>run</code> in the GDB command prompt to start the program.</p>
+<p>Meson will launch <code>gdb</code> all set up to run the test. Just type <code>run</code> in the GDB command prompt to start the program.</p>
 <p>The second use case is a test that segfaults only rarely. In this case you can invoke the following command:</p>
 <pre><code class="language-console">$ meson test --gdb --repeat=10000 testname
 </code></pre>
-<p>This runs the test up to 10 000 times under GDB automatically. If the program crashes, GDB will halt and the user can debug the application. Note that testing timeouts are disabled in this case so mesontest will not kill <code>gdb</code> while the developer is still debugging it. The downside is that if the test binary freezes, the test runner will wait forever.</p>
-<p>For further information see the command line help of Mesontest by running <code>mesontest -h</code>.</p>
+<p>This runs the test up to 10 000 times under GDB automatically. If the program crashes, GDB will halt and the user can debug the application. Note that testing timeouts are disabled in this case so <code>meson test</code> will not kill <code>gdb</code> while the developer is still debugging it. The downside is that if the test binary freezes, the test runner will wait forever.</p>
+<p>For further information see the command line help of Meson by running <code>meson test -h</code>.</p>
 <p><strong>NOTE:</strong> If <code>meson test</code> does not work for you, you likely have a old version of Meson. In that case you should call <code>mesontest</code> instead. If <code>mesontest</code> doesn't work either you have a very old version prior to 0.37.0 and should upgrade.</p>
 
 </div>
