--- a/Wrap-dependency-system-manual.html
+++ b/Wrap-dependency-system-manual.html
@@ -201,7 +201,7 @@ works in much the same way as Debian's distro patches. That is, they
 are downloaded and automatically applied to the subproject. These
 files contain a Meson build definition for the given subproject. A
 wrap file with an additional patch URL would look like this.</p>
-<pre><code>[wrap-file]
+<pre><code class="language-ini">[wrap-file]
 directory = libfoobar-1.0
 
 source_url = https://upstream.example.com/foobar-1.0.tar.gz
@@ -226,7 +226,7 @@ put them somewhere where you can download them.</p>
 packaged files. Sometimes you want to check code out directly from
 Git. Meson supports this natively. All you need to do is to write a
 slightly different wrap file.</p>
-<pre><code>[wrap-git]
+<pre><code class="language-ini">[wrap-git]
 directory=samplesubproject
 url=https://github.com/jpakkane/samplesubproject.git
 revision=head
